# personal-finance-dashboard

./: .dockerignore  .env.docker  .env.example  .env.manual-backup  .eslintrc.js  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  TASKS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prd.md  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/analytics/: admin.py  models.py  reports.py  urls.py  views.py
apps/budgets/: admin.py  models.py  notifications.py  serializers.py  tasks.py  urls.py  views.py
apps/budgets/migrations/: 0001_initial.py  0002_budget_alert_enabled_budget_critical_threshold_and_more.py
apps/core/: __init__.py  admin.py  api_urls.py  middleware.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/security/: __init__.py  encryption.py  fields.py  logging.py  malware.py  masking.py  ocr.py  pii_detection.py  validators.py
apps/core/templatetags/: htmx_tags.py
apps/expenses/: admin.py  apps.py  default_categories.py  forms.py  models.py  serializers.py  signals.py  storage.py  tasks.py  urls.py  utils.py  views.py
apps/expenses/migrations/: 0001_initial.py  0002_auto_20250606_0019.py  0003_transaction.py  0004_transaction_is_recurring_transaction_next_occurrence_and_more.py  0005_alter_transaction_merchant.py  0006_transaction_amount_index_alter_transaction_merchant_and_more.py  0007_populate_amount_index.py  0008_alter_transaction_merchant.py  0009_alter_transaction_merchant.py
apps/users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_userprofile.py  0003_add_2fa_fields.py  0004_alter_user_totp_secret.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
docker/: README.md
docs/: api-reference.md  development-commands.md  development-patterns.md  django-app-development-guide.md
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup.sh  health_check.py  init.sql  restore.sh  start_celery.sh  start_celery_beat.sh
static/src/: README.md  main.ts  style.css  vite-env.d.ts
static/src/__tests__/: setup.ts
static/src/api/: client.ts  index.ts
static/src/types/: api.ts
static/src/utils/: currency.ts  (+2 more)
templates/: base.html  dashboard.html
templates/errors/: 404.html  500.html
templates/expenses/: _transaction_edit_form.html  _transaction_list_partial.html  _transaction_row.html  _transaction_success.html  transaction_form.html  transaction_list.html
templates/htmx/: error_container.html  examples.html  loading_indicator.html
templates/registration/: 2fa_backup_codes.html  2fa_disable.html  2fa_disabled_success.html  2fa_setup.html  2fa_verify.html  already_verified.html  login.html  logout.html  logout_success.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt  registration_sent.html  resend_verification.html  verification_email.txt  verification_failed.html  verification_success.html
tests/: conftest.py  factories.py
tests/analytics/: test_analytics_engine.py  test_analytics_scenarios.py  test_api_endpoints.py  test_dashboard_metrics.py  test_models.py  test_reports.py  test_views.py
tests/budgets/: test_analytics.py  test_models.py  test_views.py
tests/core/: test_audit_models.py  test_encryption.py  test_htmx_tags.py  test_middleware.py  test_models.py  test_ocr.py  test_ocr_accuracy.py  test_pii_detection.py  test_pii_ocr_integration.py
tests/expenses/: test_forms.py  test_frontend_views.py  test_models.py  test_receipt_security.py  test_secure_storage.py  test_serializers.py  test_views.py
tests/users/: test_auth_views.py  test_backends.py  test_models.py
(+6 files in other folders)
